modified:   .gitignore 	modified:   07_Django/Django_aula/aulas.txt 	modified:   07_Django/Django_aula/base/global/base.html 	modified:   07_Django/Django_aula/base/global/partials/menu.html 	modified:   07_Django/Django_aula/base/global/partials/postblock.html 	modified:   07_Django/Django_aula/base/static/global/css/style.css 	new file:   07_Django/Django_aula/blog/templates/blog/post.html 	modified:   07_Django/Django_aula/blog/urls.py 	modified:   07_Django/Django_aula/blog/views.py 	modified:   07_Django/Django_aula/conhecendo_django/settings.py 	new file:   07_Django/Django_aula/home/static/home/css/style.css

--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,7 @@ Meus Documentos/
 Modelos/
 Recent/
 SendTo/
+static_files/
 
 # Arquivo de configuração contendo credenciais sensíveis
 config.env
